[build-system]
requires = ['setuptools>=42', 'torch>=1.11.0', 'tqdm>=4.64.0', 'dill>=0.3.4', 'pymongo>=4.1.1',
    'torchvision>=0.12.0', 'torchmetrics>=0.7.2', 'matplotlib>=3.5.1',
    'pandas>=1.4.1', 'numpy>=1.22.3', 'tensorboard>=2.8.0', 'scikit-learn>=1.0.2', 'plotly>=5.11.0']
build-backend = "setuptools.build_meta"