[metadata]
name = pytorch-helpers
version = 0.0.1
author = Johannes Zelger
author_email = jz90@st-andrews.ac.uk
description = Some helpers for pytorch relying on sacred for configuration and logging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johanneszelger/PytorchHelpers
project_urls =
    Bug Tracker = https://github.com/johanneszelger/PytorchHelpers/issues
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src